26 May 2006: 0.2.13 Miek <miek@miek.nl>
   -- BACKWARD INCOMPATIBLE CHANGES --
   * dump.sh: drop req. argument NAME. This is now an opion: -N NAME
   -- bugfixes and improvements --
   * monthday.sh: rewritten again...this time hopefully for the last
     time. It now is simpeler and local_restore and remote_restore
     are almost identical.
   * rdup: when a file changes size during the printing, skip it (Mark J Hewitt)
   * rdup: when a filename has a newline in it, skip it (Mark J Hewitt)


10 May 2006: 0.2.12 Miek <miek@miek.nl>
  -- bugfixes --
   * dump.sh: fix a bug in detecting whether to do a
     full or an incremental dump (Bram de Kruijff)
   * mirror.sh, rorrim.sh: silence chown errors
   * mirror.sh, rorrim.sh: echo to >&2 
   * mirror.sh, dump.sh: completed extended attribute support
   * mirror.sh, rorrim.sh: when not root and a directory
     would get 000 permissions, change that to 700
   * rdup, msg() fixlet
   * doc: added quick-start tex document for SANE
   * doc: poster/ directory was added for SANE
   * doc: more updates (Bram de Kruijff)
   * monthday.sh: with +0 don't print files with a suffix (Bram de Kruijff)
     (added restore test for this)


05 May 2006: 0.2.11 Miek <miek@miek.nl>
  -- major feature enhancement + major bugfixes --
   * rdup is now feature complete
   * dump.sh, restore.sh: make remote backups really work
   * scripts: implemented sanity checks on the data received. 
   extended attributes: [linux only atm]
   * mirror.sh: added -a flag, only needed here.
   * rdup: -a flag: read extended attributes to restore uid/gid 
   * bandwidth shaping was added to dump.sh and restore.sh, depends on
     cstream
   * rorrim.sh, monthday.sh: cosmetic fixes
   * rdup: added a msg function to remove all fprintfs
   * documentation was updated and improved


01 May 2006: 0.2.10 Miek <miek@miek.nl>
  -- tiny bugfixes + major restore updates --
   * rdup: formalize file handling in rdup: