@@ -1,3 +1,8 @@
+xx Jun 2006: 0.2.14 Miek <miek@miek.nl>
+
+   * Added user/ directory for user contributed scripts:
+     added gzip.pl and mirror.pl both from Mark J Hewitt
+
 26 May 2006: 0.2.13 Miek <miek@miek.nl>
    -- BACKWARD INCOMPATIBLE CHANGES --
    * dump.sh: drop req. argument NAME. This is now an opion: -N NAME
